[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "net-scan"
version = "1.0.0"
description = "NET_SCAN - Production-Grade Web Application Vulnerability Scanner"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Fred (alfredsimeon)", email = "security@netscan.dev"}
]
keywords = ["security", "vulnerability", "scanner", "penetration-testing", "web-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]

dependencies = [
    "click>=8.1.0",
    "aiohttp>=3.9.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "colorama>=0.4.6",
    "rich>=13.7.0",
    "httpx>=0.25.0",
    "cryptography>=41.0.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
    "dnspython>=2.4.0",
    "validators>=0.22.0",
    "python-dateutil>=2.8.0",
    "plotly>=5.17.0",
]

[project.urls]
Repository = "https://github.com/alfredsimeon/net_scan"
Homepage = "https://github.com/alfredsimeon"
Issues = "https://github.com/alfredsimeon/net_scan/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "bandit>=1.7.0",
]

[project.scripts]
net-scan = "net_scan.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["net_scan"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
